--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@fancyapps/fancybox": "^3.5.7",
     "jquery": "^3.5.1",
-    "swiper": "^5.4.5"
+    "swiper": "^5.4.5",
+    "tooltipster": "^4.2.8"
   },
   "devDependencies": {
     "autoprefixer": "^9.7.6",
